# leek

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/leek/: celery_client.py  config.py  db.py  event_listener.py  main.py  models.py  retention.py  schemas.py  ws.py
backend/leek/routers/: events.py  stats.py  tasks.py  workers.py
docs/: dockerhub.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  router.js
frontend/src/composables/: useApi.js  useWebSocket.js
frontend/src/stores/: events.js  tasks.js  workers.js
frontend/src/views/: Dashboard.vue  EventStream.vue  TaskDetail.vue  TaskExplorer.vue  TaskTypes.vue  Workers.vue
sample_worker/: Dockerfile  generate_tasks.py  tasks.py
