[project]
name = "leek"
version = "0.1.0"
description = "Real-time Celery monitoring and administration tool"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "celery>=5.3.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0"]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "pytest-asyncio>=0.23.0"]
